cmake_minimum_required(VERSION 3.15)
project(LeetCode1)

set(CMAKE_CXX_STANDARD 11)

#add_executable(in ./06_medium/5-LongestPalindromicSubstring.cpp)

#add_executable(in ./07_hard/23-MergekSortedLists.cpp)


add_executable(in main.cpp)
add_executable(out ./05_easily/083-RemoveDuplicatesfromSortedList.cpp)
#add_executable(in ./05_easily/101-SymmetricTree.cpp)